# Polaris-chatBot

back-end/: .gitignore  AI_Response_Structure.py  DocParser.py  LLmPrompt.py  export_to_excel.py  main.py  pyproject.toml  style_excel.py
back-end/docs/: README.md  STREAMING.md  endpoints.md  run-server.md
back-end/files/: Polaris Email Policy V1.0.rtf
back-end/rag/: chroma_store.py  indexer.py
front-end/: .env.example  README.md  package-lock.json  package.json  tailwind.config.mjs
front-end/docs/: STREAMING.md  STRUCTURE.md  THEMING.md  endpoints.md
front-end/scripts/: dev-wsl.sh
front-end/src/app/: globals.css  layout.tsx  page.tsx
front-end/src/components/: HealthBanner.tsx
front-end/src/components/chat/: ChatShell.tsx  MessageBubble.tsx  MessageList.tsx
front-end/src/components/files/: FilesPanel.tsx
front-end/src/hooks/: useChat.ts
front-end/src/lib/: env.ts
front-end/src/lib/chat/: streamChat.ts  types.ts
front-end/src/lib/streaming/: sse.ts  textStream.ts
